<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_M1L0" Id="{c3e91af1-5ac0-497f-aea6-a43e8c284355}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    // Pitch Mechanism:
    {attribute 'TcLinkTo' := '.diEncCnt:=TIIB[EL5042_M1L0_PitchBender]^FB Inputs Channel 1^Position'}
    M1L0_Pitch : HOMS_PitchMechanism := (ReqPosLimHi := 120.0,
                                         ReqPosLimLo := -182.0,
                                         diEncPosLimHi := 8662020,
                                         diEncPosLimLo := 8507095);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>