<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_M2L0" Id="{b4287d9d-45c2-46f6-b4bf-11d58d75255d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    // Pitch Mechanism
    {attribute 'TcLinkTo' := '.diEncCnt:=TIIB[EL5042_M2L0_PitchBender]^FB Inputs Channel 1^Position'}
    M2L0_Pitch : HOMS_PitchMechanism := (ReqPosLimHi := 154.9,
                                         ReqPosLimLo := -45.1,
                                         diEncPosLimHi := 9550777,
                                         diEncPosLimLo := 9448178);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>