<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_M2L0_Constants" Id="{ab17b47d-2054-4513-badb-fd79389c4d9e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	// Encoder reference values in counts = nm
	// Encoder reference values after alignment 5-29-20
	nYUP_ENC_REF : ULINT := 12018200;
	nYDWN_ENC_REF : ULINT := 15143700;
	nXUP_ENC_REF : ULINT := 25363400;
	nXDWN_ENC_REF : ULINT := 24398100;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>